# cert-studio

./: .gitignore  README.md  RELEASE.md  RLOADMAP.md  index.html  package-lock.json  package.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: 404.html  index.html
scripts/: verify-release-version.mjs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ca.rs  cert.rs  error.rs  export.rs  fs_utils.rs  main.rs  storage.rs
src/components/: Dashboard.tsx  IssueCert.tsx  RootCA.tsx
src/utils/: certValidation.test.ts  certValidation.ts
