[package]
name = "cert-studio"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
x509-parser = "0.18"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
keyring = { version = "3.0", features = ["apple-native", "windows-native"] }
rand = "0.8"
sha2 = "0.11"
openssl = { version = "0.10", features = ["vendored"] }
base64 = "0.22"
